aggiunto la struttura coda e gerarchia di default

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,9 @@
         "structclient.h": "c",
         "default.h": "c",
         "typeinfo": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "clientdefault.h": "c",
+        "defaultclient.h": "c",
+        "structqueue.h": "c"
     }
 }
